--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "redux": "^4.2.1",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "styled-components": "^6.0.0-rc.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
